[gd_scene load_steps=4 format=3 uid="uid://r8fvw401ot6a"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_rjp15"]
[ext_resource type="PackedScene" uid="uid://508denx2qf6r" path="res://Scenes/player.tscn" id="2_0pux8"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_jae37"]

[node name="Main" type="Node2D"]
script = ExtResource("1_rjp15")
player_scene = ExtResource("2_0pux8")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(-5536, 0)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -6112.0
offset_top = -324.0
offset_right = -4960.0
offset_bottom = 324.0
color = Color(0, 0, 0.121569, 0.603922)

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = -6112.0
offset_top = -324.0
offset_right = -4960.0
offset_bottom = 324.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "Concord"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "Play"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "Settings"

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer3/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "Quit"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-366.296, -258.903)
scale = Vector2(28.5928, 21.8064)
texture = SubResource("PlaceholderTexture2D_jae37")

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/PlayButton" to="." method="_on_play_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer2/MarginContainer/SettingsButton" to="." method="_on_play_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer2/MarginContainer/SettingsButton" to="." method="_on_settings_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer3/MarginContainer/QuitButton" to="." method="_on_quit_button_button_up"]
